feat: agg modulo de documentos
